@@ -1,5 +1,15 @@
+ClipIt-v1.3.8-18122010001 - 18 Dec. 2010
+	+ Fixed: Changed the "old" menu to look exactly like the indicator
+			menu.
+	+ Fixed: Changed the indicator menu to refresh automatically.
+
+ClipIt-v1.3.7-12122010001 - 12 Dec. 2010
+	+ Fixed: Changed E-Mail address and Project website.
+	+ Fixed: Included all files that get generated by autogen.sh, so
+			that now you don't need to run it anymore.
+
 ClipIt-v1.3.6-06122010002 - 06 Dec. 2010
-	+Fixed: Fixed a small bug when building without indicator support.
+	+ Fixed: Fixed a small bug when building without indicator support.
 
 ClipIt-v1.3.5-06122010001 - 06 Dec. 2010
 	+ Added: Added support for "Application Indicator".
